[gd_scene load_steps=15 format=3 uid="uid://c2iptpvfs3qqq"]

[ext_resource type="PackedScene" uid="uid://dkpis7w2h85hp" path="res://Characters/Enemies/Enemy.tscn" id="1_x7mf0"]
[ext_resource type="Script" path="res://Characters/Enemies/MarkTheReptilian/MarkTheReptilian.gd" id="2_xkgd3"]
[ext_resource type="Texture2D" uid="uid://d04uxwluqy5gw" path="res://Art/16x16 Pixel Art Roguelike (Forest) Pack/characters/player_shadow.png" id="3_02kft"]
[ext_resource type="Script" path="res://Characters/Enemies/MarkTheReptilian/MarkFSM.gd" id="3_wgm6g"]
[ext_resource type="Texture2D" uid="uid://hovi8qetgs0q" path="res://Art/16x16 Pixel Art Roguelike (Forest) Pack/enemies/reptiles/spear-end.png" id="4_6bec7"]
[ext_resource type="Texture2D" uid="uid://cvt8efcjmart0" path="res://Art/16x16 Pixel Art Roguelike (Forest) Pack/enemies/reptiles/reptile_B.png" id="6_fyfno"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h6mu2"]
radius = 5.09902

[sub_resource type="Animation" id="Animation_mexuq"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_w1n0y"]
resource_name = "idle"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_fhogu"]
resource_name = "idle_up"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_u4667"]
resource_name = "walk"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_dtpkk"]
resource_name = "walk_up"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5lyfx"]
_data = {
"RESET": SubResource("Animation_mexuq"),
"idle": SubResource("Animation_w1n0y"),
"idle_up": SubResource("Animation_fhogu"),
"walk": SubResource("Animation_u4667"),
"walk_up": SubResource("Animation_dtpkk")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_5ql2b"]
radius = 9.0

[node name="MarkTheReptilian" instance=ExtResource("1_x7mf0")]
collision_mask = 21
script = ExtResource("2_xkgd3")
is_boss = false
accerelation = null

[node name="PlayerShadow" type="Sprite2D" parent="." index="0"]
position = Vector2(0, 2)
texture = ExtResource("3_02kft")

[node name="SpearPivot" type="Node2D" parent="." index="1"]

[node name="SpearSprite" type="Sprite2D" parent="SpearPivot" index="0"]
position = Vector2(0, -7)
texture = ExtResource("4_6bec7")

[node name="FiniteStateMachine" parent="." index="2"]
script = ExtResource("3_wgm6g")

[node name="Sprite2D" parent="." index="3"]
position = Vector2(0, -5.5)
texture = ExtResource("6_fyfno")
hframes = 4
vframes = 4

[node name="CollisionShape2D" parent="." index="4"]
position = Vector2(0, -1.5)
shape = SubResource("CircleShape2D_h6mu2")

[node name="AnimationPlayer" parent="." index="5"]
libraries = {
"": SubResource("AnimationLibrary_5lyfx")
}

[node name="LifeComponent" parent="." index="7"]
hp = 10
max_hp = 10

[node name="PickUpSpearArea" type="Area2D" parent="." index="9"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpSpearArea" index="0"]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_5ql2b")
disabled = true

[node name="AttackTimer" type="Timer" parent="." index="11"]
one_shot = true

[node name="PullBackTimer" type="Timer" parent="." index="12"]
one_shot = true

[connection signal="body_entered" from="PickUpSpearArea" to="." method="_on_pick_up_spear_area_body_entered"]
